--- a/MammalAPI/appsettings.json
+++ b/MammalAPI/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+        "DefaultConnection": "SERVER= den1.mssql7.gear.host; DATABASE=mammal; UID= mammal;PWD=Pa4HU7jn!PE-;"
+  },
+	
   "AllowedHosts": "*"
 }
+
+    
