--- a/MammalAPI/appsettings.json
+++ b/MammalAPI/appsettings.json
@@ -6,9 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-        "DefaultConnection": "SERVER= den1.mssql7.gear.host; DATABASE=mammal; UID= mammal;PWD=Pa4HU7jn!PE-;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "SERVER= den1.mssql7.gear.host; DATABASE=seamammal; UID= seamammal;PWD=Ux9g!11K8-up;"
+    },
 	
   "AllowedHosts": "*"
 }
