--- a/MammalAPI/appsettings.json
+++ b/MammalAPI/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "SERVER=den1.mssql7.gear.host;DATABASE=seamammal;user:seamammal;pw:Ux9g!11K8-up;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "SERVER=den1.mssql7.gear.host;DATABASE=seamammal;user=seamammal;password=Ux9g!11K8-up;"
+    },
   "AllowedHosts": "*"
 }
